--- a/CarPricePrediction/CarPricePrediction.ipynb
+++ b/CarPricePrediction/CarPricePrediction.ipynb
@@ -6,7 +6,7 @@
     "id": "QSghHhtIzjV5"
    },
    "source": [
-    "Importing the Dependencies"
+    "# Importing the Dependencies"
    ]
   },
   {
